syntax = "proto3";

option java_package = "leyramu.framework.lersosa.common.grpc.lib";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
